Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             align-items: center;
             justify-content: center;
             color: #ffffff;
-            overflow: hidden;
+            overflow-y: auto;
         }
 
         .container {
@@ -288,3 +288,4 @@
 
 </body>
 </html>
+
